# aws-cicd

./: .gitignore  .isort.cfg  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build_and_push.yml  super_lint.yml  super_linter.yml  test_api.yml  test_unit.yml
docker/: .Dockerfile
iac/: codebuild_project.yml  ecr_repository.yml  github_oidc.yml
src/: greetings.py  main.py
tests/api/: conftest.py  test_main.py
tests/unit/: test_greetings.py
