[tool.poetry]
name = "aws-cicd"
version = "0.1.0"
description = "An example for a cicd pipline using aws"
authors = ["Christian Dienbauer <christian.dienbauer@dreamcodefactory.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pytest = "^8.2.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
